# lootscraper

./: .flake8  .gitattributes  .gitignore  .markdownlint.json  .oxfmtrc.json  .oxlintrc.json  .pylintrc  .releaserc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  README_DEV.md  TODO.md  alembic.ini  biome.json  commitlint.config.ts  config.default.ini  config.default.toml  docker_build.bat  eslint.config.js  eslint.config.ts  global.d.ts  headless.py  knip.json  lefthook.yml  lootscraper.py  mypy.ini  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  scrape_prime_loot.py  tsconfig.json  vite.config.ts  vitest-setup.ts
.github/: dependabot.yml  funding.yml  renovate.json
.github/DISCUSSION_TEMPLATE/: feature-request.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql-analysis.yml  conventional-pr.yml  conventional-pull-request.yml  create-release.yml  docker-image.yml  docker.yml  linter.yml  publish-docker.yml  publish_docker_hub.yml  publish_github_packages.yml  quality-check.yml  semantic-release.yml  stale.yml
alembic/: env.py
alembic/versions/: 20220414_191705_legacy.py  20220414_195648_string.py  20220414_195921_datetime.py  20220415_200332_game_table.py  20220418_160558_probable_game_name.py  20220419_124703_split_game_information.py  20220420_144219_user_table.py  20220422_090529_last_sent_offer.py  20220423_175707_announcements.py  20220618_153619_add_offer_duration.py  20220710_085120_add_category_to_offers.py  20221015_064303_add_timezone_to_user.py  20221110_214822_channels.py  20221220_135802_json_rawtext.py
app/: browser.py  common.py  config.example.py  configparser.py  const.py  database.py  datamodel.py  discordbot.py  feed.py  gameinfo.py  pagedriver.py  sqlalchemy.py  telegram.py  tools.py  upload.py
app/config/: config.example.py  upload.example.py
app/migration/: gameinfo.py
app/scraper/: amazon_prime.py  epic_games.py  scraper.py  steam.py  steamdb.py
app/scraper/info/: gameinfo.py  igdb.py  steam.py  utils.py
app/scraper/loot/: amazon_base.py  amazon_games.py  amazon_loot.py  amazon_prime.py  apple_games.py  epic_games.py  gog.py  gog_base.py  gog_games.py  gog_games_alwaysfree.py  google_games.py  humble.py  humble_games.py  ios_games.py  itch_games.py  itch_games_alwaysfree.py  scraper.py  scraperhelper.py  steam.py  steam_base.py  steam_games.py  steam_loot.py
config/: config.default.yaml
docs/: index.md
examples/: headless.py
images/: lootscraper.xcf
js/: inject.js
scripts/: db_refresh.py
src/: main.ts
src/bot/: index.ts  service.ts  telegram.contract.test.ts
src/bot/handlers/callbacks/: close.ts  offer.ts  router.ts  timezone.ts  toggle.ts
src/bot/handlers/commands/: base.ts  help.ts  (+6 more)
src/bot/helpers/: send.ts
src/bot/types/: callbacks.ts  config.ts  constants.ts  formatters.ts  middleware.ts
src/bot/utils/: callbackPack.test.ts  callbackPack.ts  formatters.ts  keyboards.ts  markdown.ts  send.ts
src/database/: migrations.ts
src/database/migrations/: 001-initial.ts  001_initial.ts  002-alembic.ts  003-indices.ts  004-nullability.ts  005-strict.ts  006-dateformat.ts  2024-12-08-initial.ts  2024-12-10-nullability.ts
src/lootscraper/: __init__.py  __main__.py  browser.py  common.py  config.py  database.py  feed.py  html.py  main.py  processing.py  telegrambot.py  tools.py  upload.py  utils.py
src/lootscraper/alembic/: env.py
src/lootscraper/data/: config.default.toml
src/lootscraper/scraper/: __init__.py  amazon_base.py  amazon_games.py  amazon_loot.py  apple_games.py  epic_games.py  gog_base.py  gog_games.py  gog_games_alwaysfree.py  google_games.py  humble_games.py  info_igdb.py  info_steam.py  itch_games.py  scraper_base.py  steam_base.py  steam_games.py  steam_loot.py  twitch.py  ubisoft_games.py
src/scrapers/: index.ts  utils.ts
src/scrapers/base/: scraper.ts
src/scrapers/implementations/: apple.contract.test.ts  apple.ts  epic.contract.test.ts  epic.ts  google.contract.test.ts  google.ts  humble.contract.test.ts  humble.ts  index.ts  itch.contract.test.ts  itch.ts  ubisoft.contract.test.ts  ubisoft.ts
src/scrapers/scrapers/: epic.ts
src/services/: announcement.ts  browser.contract.test.ts  browser.ts  config.test.ts  config.ts  database.ts  discordbot.ts  feed.ts  ftp.ts  gameinfo.ts  html.ts  memoryMonitor.ts  orchestrator.ts  scraper.ts  telegrambot.ts  translation.ts
src/services/browser/: utils.ts
src/services/database/: announcementRepository.test.ts  announcementRepository.ts  baseRepository.ts  common.ts  discordChannelRepository.ts  gameRepository.test.ts  gameRepository.ts  hashRepository.ts  igdbInfoRepository.test.ts  igdbInfoRepository.ts  offerRepository.test.ts  offerRepository.ts  operations.test.ts  operations.ts  scrapingRunRepository.ts  steamInfoRepository.test.ts  steamInfoRepository.ts  telegramChatRepository.test.ts  telegramChatRepository.ts  telegramSubscriptionRepository.ts
src/services/gameinfo/: igdb.test.ts  igdb.ts  steam.ts
src/services/generators/: html.ts  rss.ts
src/services/scraper/: index.ts  utils.ts
src/services/telegrambot/: telegram.contract.test.ts
src/types/: basic.ts  config.ts  database.ts  errors.ts  index.ts  telegram.ts
src/utils/: atom.ts  dateCalculator.test.ts  dateCalculator.ts  dateTime.test.ts  dateTime.ts  delay.ts  errorHandler.ts  fetch.ts  hash.ts  index.ts  logger.test.ts  logger.ts  names.test.ts  names.ts  objectCleaner.ts  path.ts  stringMatcher.test.ts  stringMatcher.ts  stringTools.test.ts  stringTools.ts  titleCleaner.test.ts  titleCleaner.ts  version.ts
stubs/chromedriver_binary/: __init__.pyi  utils.pyi
stubs/igdb/: igdbapi_pb2.pyi  wrapper.pyi
templates/: .release_notes.md.j2  config.default.yaml
tests/: testData.ts  test_api.py  test_database.py  test_gameinfo.py  test_helper.py  test_manual.py  test_playwright.py  test_scraper.py  test_telegram.py  test_test.py
tests/database/: operations.test.ts  testData.ts
tools/: codeDump.ts  codeList.ts
utils/: exampleIgdbCall.ts  logger.ts
(+146 files in other folders)
