[tool.poetry]
name = "lootscraper"
version = "1.7.0"
description = "RSS feeds and Telegram bot for free game and loot offers."
authors = ["Eiko Wagenknecht <git@eiko-wagenknecht.de>"]
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/eikowagenknecht/lootscraper"
include = ["config.default.toml"]

[tool.poetry.scripts]
lootscraper = 'lootscraper.main:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/eikowagenknecht/lootscraper/issues"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
feedgen = "^0.9.0"
humanize = "^4.8.0"
httpx = "^0.25.0"
python-telegram-bot = { version = "^20.6", extras = ["rate-limiter"] }
playwright = "^1.39.0"
SQLAlchemy = "^2.0.22"
Unidecode = "^1.3.7"
xvfbwrapper = "^0.2.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Linting and formatting
ruff = "^0.1.0"
# Type checking
mypy = "^1.6"
# Profiling
# scalene = "^1.5.19"
# Testing
pytest = "^7.4.2"
# Python standard
setuptools = "^68.0.0"
wheel = "^0.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# See rules here: https://beta.ruff.rs/docs/rules/
select = [
    "F",
    "W",
    "B",
    "E",
    "I",
    "N",
    "PLC",
    "PLE",
    # "PLR",
    "PLW",
    "TRY",
    "PTH",
    "TID",
    "SIM",
    "ARG",
    "TCH",
    "RET",
    "UP",
    "YTT",
    "SLF",
    "ANN",
    "S",
    "A",
    "COM",
    "DTZ",
    "C4",
    "ISC",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "INP",
    "ICN",
    "D",   # Pydocstyle
]

ignore = [
    "S101",   # Use of assert detected
    "TRY003", # Long messages in exceptions
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D106",   # Missing docstring in public nested class
    "D107",   # Missing docstring in __init__
    "D401",   # First line should be in imperative mood
    "D205",   # 1 blank line required between summary line and description
]

[tool.ruff.format]
line-ending = "lf"
preview = true

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.11"
# ignore imports from 3rd party libraries where no stubs are available
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
# disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_generics = true
# plugins = "sqlalchemy.ext.mypy.plugin" # Needed for SQLAlchemy 1.4 only
